<resources>
    <string name="app_name">Laspika</string>
    <string name="lewati">Lewati</string>
    <string name="lanjut">Lanjut</string>
    <string name="onboarding_pic">onboarding_pic</string>
    <string name="onboarding_1">Hai!\nSenang melihatmu berani ada di sini!</string>
    <string name="onboarding_desc_1">Selamat datang di Aplikasti Pelaporan Pelanggaran\nSPI UNSIKA!</string>
    <string name="onboarding_2">Kami memberikan jaminan penuh\nterhadap kerahasiaan identitas Anda</string>
    <string name="onboarding_desc_2">Keamanan informasi dari Anda adalah prioritas\nutama kami. Kami akan menjaga rahasia identitas Anda sebagai whistleblower sebaik mungkin</string>
    <string name="onboarding_3">SPI Unsika memberikan jaminan\npenuh terhadap kerahasiaan laporan\nmenggunakan whistleblowing system</string>
    <string name="onboarding_desc_3">Whistleblowing system adalah sistem yang mengawasi pelaporan secara rahasia, anonim, dan independen atas setiap kegiatan atau tindakan yang melanggar hukum, peraturan, atau standar etika.</string>
    <string name="onboarding_4">Ayo, mari mulai pelaporan mu!</string>
    <string name="onboarding_desc_4">Kami menghargai keberanian dan kontribusi Anda\ndalam menciptakan lingkungan UNSIKA yang aman\ndan adil.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="masuk">Masuk</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="masukkan_email_dan_kata_sandi_untuk_masuk_nke_akun_anda">Masukkan Email dan Kata Sandi untuk masuk\nke akun anda</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="masukkan_kata_sandi">Masukkan Kata Sandi</string>
    <string name="belum_memiliki_akun">Belum memiliki akun? </string>
    <string name="daftar">Daftar</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="masukkan_nomor_handphone">Masukkan Nomor Handphone</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun? </string>
    <string name="profile">profile</string>
    <string name="hai_dela_amaliya">Hai, %1$s</string>
    <string name="laporkan_pelanggaran">Laporkan Pelanggaran Sekarang!</string>
    <string name="informasi">INFORMASI</string>
    <string name="informasi_spi_home">SPI UNSIKA berinovasi dengan memperkenalkan pengawasan berbasis android yang bertujuan untuk memaksimalkan efisiensi operasional dengan memanfaatkan fungsionalitas perangkat Android yang dapat digunakan untuk merekam, menyimpan, dan mengelola data pengawasan dengan cepat dan efisien.</string>
    <string name="kategori_pelanggaran">Kategori Pelanggaran</string>
    <string name="tindakan_korupsi">Tindakan Korupsi</string>
    <string name="pengelolaan_keuangan">Pengelolaan Keuangan</string>
    <string name="pengadaan_nbarang_dan_jasa">Pengadaan Barang dan Jasa</string>
    <string name="pelanggaran_kepegawaian">Pelanggaran Kepegawaian</string>
    <string name="penyalahgunaan_wewenang">Penyalahgunaan Wewenang</string>
    <string name="laporan_pelanggaran">Laporan Pelanggaran</string>
    <string name="laporan_info">Kami menyediakan beberapa layanan laporan pelanggaran. Mohon pilih sesuai kebutuhan anda</string>
    <string name="pengadaan_barang_dan_jasa">Pengadaan Barang dan Jasa</string>
    <string name="penyalahgunaan_wewenang_s">Penyalahgunaan Wewenang</string>
    <string name="tindak_pidana">Jika anda mengetahui atau mencurigai adanya tindak %1$s oleh staf UNSIKA, laporkan ke SPI UNSIKA. Laporan yang memenuhi syarat akan diproses lebih lanjut.</string>
    <string name="unggah_laporan">Unggah Laporan</string>
    <string name="ic_cloud">ic_cloud</string>
    <string name="upload_bukti">Unggah barang bukti mu di sini!\nBerupa foto,Video atau rekaman suara</string>
    <string name="unggah">Unggah</string>
    <string name="pihak_yang_diduga_terlibat">Pihak Yang Diduga Terlibat :</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="jabatan">Jabatan</string>
    <string name="tanggal">Tanggal</string>
    <string name="waktu_perkiraan">Waktu Perkiraan</string>
    <string name="deskripsi_pelanggaran">Deskripsi Pelanggaran</string>
    <string name="uraikan_pelanggaran">Uraikan pelanggaran secara singkat dan jelas!</string>
    <string name="kirim_sebagai_anonymous">Kirim sebagai anonymous</string>
    <string name="pengadu_anonymous">Pengadu Anonymous</string>
    <string name="home">Beranda</string>
    <string name="riwayat">Riwayat</string>
    <string name="akun">Akun</string>
    <string name="notification">Notifikasi</string>
    <string name="empty" />
    <string name="masukkan_konfirmasi_kata_sandi">Masukkan Konfirmasi Kata Sandi</string>
    <string name="message_success">Laporan Berhasil !\nYuk cek Riwayat Laporan mu\nuntuk melihat Status\nLaporanmu</string>
    <string name="message_failed">Laporan tidak berhasil\ndiunggah!</string>
    <string name="error_info">Kesalahan dalam proses unggah, silahkan\nperiksa kembali persyaratan pengisian\nlaporan!</string>
    <string name="lihat_riwayat">Lihat Riwayat</string>
    <string name="notification_cancelled_body">Laporan yang kamu buat sudah dibatalkan!. Yuk Buat laporan pelanggaran kembali…</string>
    <string name="notification_cancelled_title">Laporan kamu telah dibatalkan!</string>
    <string name="notification_date">%1$s WIB ● %2$s</string>
    <string name="history_title">Laporan %1$s</string>
    <string name="tidak_ada_notifikasi">Tidak ada notifikasi</string>
    <string name="tidak_ada_riwayat">Tidak ada riwayat</string>
    <string name="riwayat_laporan">Riwayat Laporan</string>
    <string name="riwayat_pending">Laporan yang kamu buat sedang di proses SPI UNSIKA</string>
    <string name="riwayat_approved">Laporan yang kamu buat berhasil dan sedang di tindak lanjuti</string>
    <string name="riwayat_cancelled">Laporan yang kamu buat telah dibatalkan</string>
    <string name="detail_laporan">Detail Laporan</string>
    <string name="lihat_dokumen_bukti_pelanggaran">Lihat dokumen bukti pelanggaran</string>
    <string name="buka">Buka</string>
    <string name="batalkan_laporan">Batalkan Laporan</string>
    <string name="informasi_akun">Informasi Akun</string>
    <string name="detail">Detail</string>
    <string name="logout">Logout</string>
    <string name="ya">Ya</string>
    <string name="batal">Batal</string>
    <string name="detail_profile">Detail Profile</string>
    <string name="username">Username</string>
    <string name="nomor_handphone">Nomor Handphone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="pw">*******</string>
    <string name="simpan">Simpan</string>
    <string name="lupa_sandi">Lupa Sandi?</string>
</resources>