<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.63" />

    <ImageView
        android:id="@+id/iv_onboarding"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/onboarding_1"
        android:padding="30dp"
        android:contentDescription="@string/onboarding_pic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guide_line_top"/>

    <TextView
        android:id="@+id/tv_onboarding_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guide_line_top"
        android:fontFamily="@font/poppins_semibold"
        android:textAlignment="center"
        android:textSize="16sp"
        android:text="@string/onboarding_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_onboarding_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_onboarding_title"
        android:fontFamily="@font/poppins"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="15dp"
        android:text="@string/onboarding_desc_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>